k3d-gitlab/.kubefirst/clusters/mgmt-template/components/staging/metaphor-frontend/templates/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: metaphor-staging-ingress
  namespace: staging
spec:
  entryPoints:
    - websecure
  routes:
  - kind: Rule
    match: Host(`metaphor-staging.<DOMAIN_NAME>`)
    services:
    - name: metaphor-staging
      port: 80
  tls:
    secretName: metaphor-staging-tls
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-https
  namespace: staging
spec:
  redirectScheme:
    scheme: https
    permanent: true
